package com.panda.study.designmodel.visitor;

/**
 * Created by Administrator on 2019/8/4.
 */
public abstract class Action {
    //得到男性的测评
    public abstract void getManResult(Man man);
    //得到女性的测评
    public abstract void getWomanResult(Woman man);
}
